@@ -2,10 +2,9 @@ package judgels.michael.problem.programming.grading.config;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import judgels.fs.FileInfo;
 import judgels.gabriel.api.TestCase;
 import judgels.gabriel.api.TestGroup;
@@ -31,9 +30,9 @@ public class FunctionalWithSubtasksGradingConfigAdapterTests extends BaseGrading
         FunctionalWithSubtasksGradingConfig config = new FunctionalWithSubtasksGradingConfig.Builder()
                 .timeLimit(2000)
                 .memoryLimit(65536)
-                .sourceFileFieldKeys(ImmutableList.of("encoder", "decoder"))
-                .testData(ImmutableList.of(
-                        TestGroup.of(0, ImmutableList.of())))
+                .sourceFileFieldKeys(List.of("encoder", "decoder"))
+                .testData(List.of(
+                        TestGroup.of(0, List.of())))
                 .build();
 
         assertThat(adapter.buildConfigFromForm(form)).isEqualTo(config);
@@ -67,18 +66,18 @@ public class FunctionalWithSubtasksGradingConfigAdapterTests extends BaseGrading
         FunctionalWithSubtasksGradingConfig config = new FunctionalWithSubtasksGradingConfig.Builder()
                 .timeLimit(2000)
                 .memoryLimit(65536)
-                .sourceFileFieldKeys(ImmutableList.of("encoder", "decoder"))
-                .testData(ImmutableList.of(
-                        TestGroup.of(0, ImmutableList.of(
-                                TestCase.of("sample_1.in", "sample_1.out", ImmutableSet.of(0, 2)),
-                                TestCase.of("sample_2.in", "sample_2.out", ImmutableSet.of(0, 1, 2)),
-                                TestCase.of("sample_3.in", "sample_3.out", ImmutableSet.of(0, 2)))),
-                        TestGroup.of(1, ImmutableList.of(
-                                TestCase.of("1_1.in", "1_1.out", ImmutableSet.of(1, 2)),
-                                TestCase.of("1_2.in", "1_2.out", ImmutableSet.of(1, 2)))),
-                        TestGroup.of(2, ImmutableList.of(
-                                TestCase.of("2_1.in", "2_1.out", ImmutableSet.of(2))))))
-                .subtaskPoints(ImmutableList.of(30, 70))
+                .sourceFileFieldKeys(List.of("encoder", "decoder"))
+                .testData(List.of(
+                        TestGroup.of(0, List.of(
+                                TestCase.of("sample_1.in", "sample_1.out", Set.of(0, 2)),
+                                TestCase.of("sample_2.in", "sample_2.out", Set.of(0, 1, 2)),
+                                TestCase.of("sample_3.in", "sample_3.out", Set.of(0, 2)))),
+                        TestGroup.of(1, List.of(
+                                TestCase.of("1_1.in", "1_1.out", Set.of(1, 2)),
+                                TestCase.of("1_2.in", "1_2.out", Set.of(1, 2)))),
+                        TestGroup.of(2, List.of(
+                                TestCase.of("2_1.in", "2_1.out", Set.of(2))))))
+                .subtaskPoints(List.of(30, 70))
                 .customScorer("scorer.cpp")
                 .build();
 
@@ -91,11 +90,11 @@ public class FunctionalWithSubtasksGradingConfigAdapterTests extends BaseGrading
         FunctionalWithSubtasksGradingConfig config = new FunctionalWithSubtasksGradingConfig.Builder()
                 .timeLimit(2000)
                 .memoryLimit(65536)
-                .sourceFileFieldKeys(ImmutableList.of("encoder", "decoder"))
-                .subtaskPoints(ImmutableList.of(30, 70))
+                .sourceFileFieldKeys(List.of("encoder", "decoder"))
+                .subtaskPoints(List.of(30, 70))
                 .build();
 
-        List<FileInfo> testDataFiles = ImmutableList.of(
+        List<FileInfo> testDataFiles = List.of(
                 createFile("hello_sample_1.in"),
                 createFile("hello_sample_1.out"),
                 createFile("hello_1_1.in"),
@@ -109,14 +108,14 @@ public class FunctionalWithSubtasksGradingConfigAdapterTests extends BaseGrading
         FunctionalWithSubtasksGradingConfig populatedConfig = (FunctionalWithSubtasksGradingConfig) adapter.autoPopulateTestData(config, testDataFiles);
         assertThat(populatedConfig).isEqualTo(new FunctionalWithSubtasksGradingConfig.Builder()
                 .from(config)
-                .testData(ImmutableList.of(
-                        TestGroup.of(0, ImmutableList.of(
-                                TestCase.of("hello_sample_1.in", "hello_sample_1.out", ImmutableSet.of(0)))),
-                        TestGroup.of(1, ImmutableList.of(
-                                TestCase.of("hello_1_1.in", "hello_1_1.out", ImmutableSet.of(1, 2)),
-                                TestCase.of("hello_1_2.in", "hello_1_2.out", ImmutableSet.of(1, 2)))),
-                        TestGroup.of(2, ImmutableList.of(
-                                TestCase.of("hello_2_1.in", "hello_2_1.out", ImmutableSet.of(2))))))
+                .testData(List.of(
+                        TestGroup.of(0, List.of(
+                                TestCase.of("hello_sample_1.in", "hello_sample_1.out", Set.of(0)))),
+                        TestGroup.of(1, List.of(
+                                TestCase.of("hello_1_1.in", "hello_1_1.out", Set.of(1, 2)),
+                                TestCase.of("hello_1_2.in", "hello_1_2.out", Set.of(1, 2)))),
+                        TestGroup.of(2, List.of(
+                                TestCase.of("hello_2_1.in", "hello_2_1.out", Set.of(2))))))
                 .build());
     }
 }
