@@ -2,10 +2,9 @@ package judgels.michael.problem.programming.grading.config;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 import judgels.fs.FileInfo;
 import judgels.gabriel.api.TestCase;
 import judgels.gabriel.api.TestGroup;
@@ -30,8 +29,8 @@ public class InteractiveWithSubtasksGradingConfigAdapterTests extends BaseGradin
         InteractiveWithSubtasksGradingConfig config = new InteractiveWithSubtasksGradingConfig.Builder()
                 .timeLimit(2000)
                 .memoryLimit(65536)
-                .testData(ImmutableList.of(
-                        TestGroup.of(0, ImmutableList.of())))
+                .testData(List.of(
+                        TestGroup.of(0, List.of())))
                 .build();
 
         assertThat(adapter.buildConfigFromForm(form)).isEqualTo(config);
@@ -64,17 +63,17 @@ public class InteractiveWithSubtasksGradingConfigAdapterTests extends BaseGradin
         InteractiveWithSubtasksGradingConfig config = new InteractiveWithSubtasksGradingConfig.Builder()
                 .timeLimit(2000)
                 .memoryLimit(65536)
-                .testData(ImmutableList.of(
-                        TestGroup.of(0, ImmutableList.of(
-                                TestCase.of("sample_1.in", "", ImmutableSet.of(0, 2)),
-                                TestCase.of("sample_2.in", "", ImmutableSet.of(0, 1, 2)),
-                                TestCase.of("sample_3.in", "", ImmutableSet.of(0, 2)))),
-                        TestGroup.of(1, ImmutableList.of(
-                                TestCase.of("1_1.in", "", ImmutableSet.of(1, 2)),
-                                TestCase.of("1_2.in", "", ImmutableSet.of(1, 2)))),
-                        TestGroup.of(2, ImmutableList.of(
-                                TestCase.of("2_1.in", "", ImmutableSet.of(2))))))
-                .subtaskPoints(ImmutableList.of(30, 70))
+                .testData(List.of(
+                        TestGroup.of(0, List.of(
+                                TestCase.of("sample_1.in", "", Set.of(0, 2)),
+                                TestCase.of("sample_2.in", "", Set.of(0, 1, 2)),
+                                TestCase.of("sample_3.in", "", Set.of(0, 2)))),
+                        TestGroup.of(1, List.of(
+                                TestCase.of("1_1.in", "", Set.of(1, 2)),
+                                TestCase.of("1_2.in", "", Set.of(1, 2)))),
+                        TestGroup.of(2, List.of(
+                                TestCase.of("2_1.in", "", Set.of(2))))))
+                .subtaskPoints(List.of(30, 70))
                 .communicator("communicator.cpp")
                 .build();
 
@@ -87,10 +86,10 @@ public class InteractiveWithSubtasksGradingConfigAdapterTests extends BaseGradin
         InteractiveWithSubtasksGradingConfig config = new InteractiveWithSubtasksGradingConfig.Builder()
                 .timeLimit(2000)
                 .memoryLimit(65536)
-                .subtaskPoints(ImmutableList.of(30, 70))
+                .subtaskPoints(List.of(30, 70))
                 .build();
 
-        List<FileInfo> testDataFiles = ImmutableList.of(
+        List<FileInfo> testDataFiles = List.of(
                 createFile("hello_sample_1.in"),
                 createFile("hello_1_1.in"),
                 createFile("hello_1_2.in"),
@@ -99,14 +98,14 @@ public class InteractiveWithSubtasksGradingConfigAdapterTests extends BaseGradin
         InteractiveWithSubtasksGradingConfig populatedConfig = (InteractiveWithSubtasksGradingConfig) adapter.autoPopulateTestData(config, testDataFiles);
         assertThat(populatedConfig).isEqualTo(new InteractiveWithSubtasksGradingConfig.Builder()
                 .from(config)
-                .testData(ImmutableList.of(
-                        TestGroup.of(0, ImmutableList.of(
-                                TestCase.of("hello_sample_1.in", "", ImmutableSet.of(0)))),
-                        TestGroup.of(1, ImmutableList.of(
-                                TestCase.of("hello_1_1.in", "", ImmutableSet.of(1, 2)),
-                                TestCase.of("hello_1_2.in", "", ImmutableSet.of(1, 2)))),
-                        TestGroup.of(2, ImmutableList.of(
-                                TestCase.of("hello_2_1.in", "", ImmutableSet.of(2))))))
+                .testData(List.of(
+                        TestGroup.of(0, List.of(
+                                TestCase.of("hello_sample_1.in", "", Set.of(0)))),
+                        TestGroup.of(1, List.of(
+                                TestCase.of("hello_1_1.in", "", Set.of(1, 2)),
+                                TestCase.of("hello_1_2.in", "", Set.of(1, 2)))),
+                        TestGroup.of(2, List.of(
+                                TestCase.of("hello_2_1.in", "", Set.of(2))))))
                 .build());
     }
 }
