@@ -2,12 +2,10 @@ package judgels.uriel.contest.scoreboard.gcj;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -36,7 +34,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
         private ScoreboardState state = new ScoreboardState.Builder()
                 .addProblemJids("p1", "p2")
                 .addProblemAliases("A", "B")
-                .problemPoints(ImmutableList.of(1, 10))
+                .problemPoints(List.of(1, 10))
                 .build();
 
         private Contest contest = new Contest.Builder()
@@ -53,17 +51,17 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                 .wrongSubmissionPenalty(10)
                 .build();
 
-        private Set<ContestContestant> contestants = ImmutableSet.of(
+        private Set<ContestContestant> contestants = Set.of(
                 new ContestContestant.Builder().userJid("c1").build(),
                 new ContestContestant.Builder().userJid("c2").contestStartTime(Instant.ofEpochSecond(300)).build());
 
-        private Map<String, Profile> profilesMap = ImmutableMap.of(
+        private Map<String, Profile> profilesMap = Map.of(
                 "c1", new Profile.Builder().username("c1").build(),
                 "c2", new Profile.Builder().username("c2").build());
 
         @Test
         void time_calculation() {
-            List<Submission> submissions = ImmutableList.of(
+            List<Submission> submissions = List.of(
                     createSubmission(1, 300, "c1", "p1", 100, Verdict.ACCEPTED),
                     createSubmission(2, 360, "c1", "p1", 0, Verdict.TIME_LIMIT_EXCEEDED),
                     createSubmission(3, 400, "c1", "p2", 0, Verdict.TIME_LIMIT_EXCEEDED),
@@ -78,7 +76,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                     contestants,
                     profilesMap,
                     submissions,
-                    ImmutableList.of(),
+                    List.of(),
                     Optional.empty());
 
             assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -114,7 +112,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
         @Nested
         class ProblemOrdering {
-            private List<Submission> submissions = ImmutableList.of(
+            private List<Submission> submissions = List.of(
                     createSubmission(1, 350, "c2", "p1", 100, Verdict.ACCEPTED),
                     createSubmission(2, 400, "c1", "p2", 100, Verdict.ACCEPTED));
 
@@ -128,7 +126,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -167,7 +165,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                 state = new ScoreboardState.Builder()
                         .addProblemJids("p2", "p1")
                         .addProblemAliases("B", "A")
-                        .problemPoints(ImmutableList.of(10, 1))
+                        .problemPoints(List.of(10, 1))
                         .build();
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
@@ -178,7 +176,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -217,7 +215,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
         class Sorting {
             @Test
             void points_over_penalty() {
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 300, "c1", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(2, 900, "c2", "p2", 100, Verdict.ACCEPTED));
 
@@ -229,7 +227,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -265,7 +263,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
             @Test
             void penalty_as_tiebreaker() {
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 900, "c2", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(2, 900, "c1", "p1", 100, Verdict.ACCEPTED));
 
@@ -277,7 +275,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -313,7 +311,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
             @Test
             void same_rank_if_equal() {
-                contestants = ImmutableSet.of(
+                contestants = Set.of(
                         new ContestContestant.Builder().userJid("c1").build(),
                         new ContestContestant.Builder()
                                 .userJid("c2")
@@ -321,12 +319,12 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                                 .build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
-                profilesMap = ImmutableMap.of(
+                profilesMap = Map.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
                         "c3", new Profile.Builder().username("c3").build());
 
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 660, "c1", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(2, 900, "c2", "p1", 100, Verdict.ACCEPTED));
 
@@ -338,7 +336,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -388,17 +386,17 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
             @Test
             void zero_points_ordering() {
-                contestants = ImmutableSet.of(
+                contestants = Set.of(
                         new ContestContestant.Builder().userJid("c1").build(),
                         new ContestContestant.Builder().userJid("c2").build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
-                profilesMap = ImmutableMap.of(
+                profilesMap = Map.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
                         "c3", new Profile.Builder().username("c3").build());
 
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 660, "c1", "p1", 0, Verdict.WRONG_ANSWER),
                         createSubmission(2, 900, "c1", "p2", 0, Verdict.WRONG_ANSWER),
                         createSubmission(3, 900, "c3", "p2", 0, Verdict.WRONG_ANSWER));
@@ -411,7 +409,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -464,7 +462,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
         class PendingAfterFreeze {
             private Optional<Instant> freezeTime = Optional.of(Instant.ofEpochSecond(500));
 
-            private List<Submission> baseSubmissions = ImmutableList.of(
+            private List<Submission> baseSubmissions = List.of(
                     createSubmission(1, 100, "c1", "p1", 100, Verdict.ACCEPTED),
                     createSubmission(2, 400, "c2", "p2", 100, Verdict.ACCEPTED),
                     createSubmission(3, 450, "c2", "p1", 100, Verdict.ACCEPTED));
@@ -479,7 +477,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         baseSubmissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -515,10 +513,8 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
             @Test
             void pending_does_not_overwrite_accepted() {
-                List<Submission> submissions = new ImmutableList.Builder<Submission>()
-                        .addAll(baseSubmissions)
-                        .add(createSubmission(4, 501, "c1", "p1", 100, Verdict.PENDING))
-                        .build();
+                List<Submission> submissions = new ArrayList<>(baseSubmissions);
+                submissions.add(createSubmission(4, 501, "c1", "p1", 100, Verdict.PENDING));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
                         contest,
@@ -528,7 +524,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -564,10 +560,8 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
             @Test
             void pending_does_overwrite_not_accepted() {
-                List<Submission> submissions = new ImmutableList.Builder<Submission>()
-                        .addAll(baseSubmissions)
-                        .add(createSubmission(4, 501, "c1", "p2", 0, Verdict.PENDING))
-                        .build();
+                List<Submission> submissions = new ArrayList<>(baseSubmissions);
+                submissions.add(createSubmission(4, 501, "c1", "p2", 0, Verdict.PENDING));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
                         contest,
@@ -577,7 +571,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -613,10 +607,8 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
             @Test
             void pending_counts_on_freeze_time() {
-                List<Submission> submissions = new ImmutableList.Builder<Submission>()
-                        .addAll(baseSubmissions)
-                        .add(createSubmission(4, 500, "c1", "p2", 0, Verdict.PENDING))
-                        .build();
+                List<Submission> submissions = new ArrayList<>(baseSubmissions);
+                submissions.add(createSubmission(4, 500, "c1", "p2", 0, Verdict.PENDING));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
                         contest,
@@ -626,7 +618,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (GcjScoreboardEntry) e)).containsExactly(
@@ -663,7 +655,7 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
 
         @Nested
         class IncrementalProcess {
-            List<Submission> submissions = ImmutableList.of(
+            List<Submission> submissions = List.of(
                     createSubmission(5, 100, "c1", "p1", 0, Verdict.WRONG_ANSWER),
                     createSubmission(6, 200, "c2", "p1", 0, Verdict.WRONG_ANSWER),
                     createSubmission(7, 300, "c1", "p1", 0, Verdict.WRONG_ANSWER),
@@ -672,26 +664,26 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                     createSubmission(10, 600, "c2", "p1", 0, Verdict.PENDING),
                     createSubmission(11, 700, "c1", "p2", 100, Verdict.ACCEPTED));
 
-            Set<ContestContestant> contestants = ImmutableSet.of(
+            Set<ContestContestant> contestants = Set.of(
                     new ContestContestant.Builder().userJid("c1").build(),
                     new ContestContestant.Builder().userJid("c2").contestStartTime(Instant.ofEpochSecond(300)).build(),
                     new ContestContestant.Builder().userJid("c3").build());
 
-            Map<String, Profile> profilesMap = ImmutableMap.of(
+            Map<String, Profile> profilesMap = Map.of(
                     "c1", new Profile.Builder().username("c1").build(),
                     "c2", new Profile.Builder().username("c2").build(),
                     "c3", new Profile.Builder().username("c3").build());
 
             GcjScoreboardIncrementalContent incrementalContent = new GcjScoreboardIncrementalContent.Builder()
                     .lastSubmissionId(3)
-                    .putAttemptsMapsByContestantJid("c2", ImmutableMap.of("p1", 0, "p2", 2))
-                    .putAttemptsMapsByContestantJid("c3", ImmutableMap.of("p1", 1, "p2", 0))
-                    .putPenaltyMapsByContestantJid("c2", ImmutableMap.of("p1", 0L, "p2", 3L))
-                    .putPenaltyMapsByContestantJid("c3", ImmutableMap.of("p1", 3L, "p2", 0L))
-                    .putProblemStateMapsByContestantJid("c2", ImmutableMap.of(
+                    .putAttemptsMapsByContestantJid("c2", Map.of("p1", 0, "p2", 2))
+                    .putAttemptsMapsByContestantJid("c3", Map.of("p1", 1, "p2", 0))
+                    .putPenaltyMapsByContestantJid("c2", Map.of("p1", 0L, "p2", 3L))
+                    .putPenaltyMapsByContestantJid("c3", Map.of("p1", 3L, "p2", 0L))
+                    .putProblemStateMapsByContestantJid("c2", Map.of(
                             "p1", GcjScoreboardProblemState.NOT_ACCEPTED,
                             "p2", GcjScoreboardProblemState.NOT_ACCEPTED))
-                    .putProblemStateMapsByContestantJid("c3", ImmutableMap.of(
+                    .putProblemStateMapsByContestantJid("c3", Map.of(
                             "p1", GcjScoreboardProblemState.ACCEPTED,
                             "p2", GcjScoreboardProblemState.NOT_ACCEPTED))
                     .build();
@@ -706,19 +698,19 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new GcjScoreboardIncrementalContent.Builder()
                         .lastSubmissionId(9)
-                        .putAttemptsMapsByContestantJid("c1", ImmutableMap.of("p1", 3, "p2", 0))
-                        .putAttemptsMapsByContestantJid("c2", ImmutableMap.of("p1", 1, "p2", 1))
-                        .putPenaltyMapsByContestantJid("c1", ImmutableMap.of("p1", 6L, "p2", 0L))
-                        .putPenaltyMapsByContestantJid("c2", ImmutableMap.of("p1", 0L, "p2", 4L))
-                        .putProblemStateMapsByContestantJid("c1", ImmutableMap.of(
+                        .putAttemptsMapsByContestantJid("c1", Map.of("p1", 3, "p2", 0))
+                        .putAttemptsMapsByContestantJid("c2", Map.of("p1", 1, "p2", 1))
+                        .putPenaltyMapsByContestantJid("c1", Map.of("p1", 6L, "p2", 0L))
+                        .putPenaltyMapsByContestantJid("c2", Map.of("p1", 0L, "p2", 4L))
+                        .putProblemStateMapsByContestantJid("c1", Map.of(
                                 "p1", GcjScoreboardProblemState.ACCEPTED,
                                 "p2", GcjScoreboardProblemState.NOT_ACCEPTED))
-                        .putProblemStateMapsByContestantJid("c2", ImmutableMap.of(
+                        .putProblemStateMapsByContestantJid("c2", Map.of(
                                 "p1", GcjScoreboardProblemState.NOT_ACCEPTED,
                                 "p2", GcjScoreboardProblemState.ACCEPTED))
                         .build());
@@ -733,8 +725,8 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         styleModuleConfig,
                         contestants,
                         profilesMap,
-                        ImmutableList.of(),
-                        ImmutableList.of(),
+                        List.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new GcjScoreboardIncrementalContent.Builder()
@@ -753,24 +745,24 @@ class GcjScoreboardProcessorTests extends AbstractProgrammingScoreboardProcessor
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new GcjScoreboardIncrementalContent.Builder()
                         .lastSubmissionId(9)
-                        .putAttemptsMapsByContestantJid("c1", ImmutableMap.of("p1", 3, "p2", 0))
-                        .putAttemptsMapsByContestantJid("c2", ImmutableMap.of("p1", 1, "p2", 3))
-                        .putAttemptsMapsByContestantJid("c3", ImmutableMap.of("p1", 1, "p2", 0))
-                        .putPenaltyMapsByContestantJid("c1", ImmutableMap.of("p1", 6L, "p2", 0L))
-                        .putPenaltyMapsByContestantJid("c2", ImmutableMap.of("p1", 0L, "p2", 4L))
-                        .putPenaltyMapsByContestantJid("c3", ImmutableMap.of("p1", 3L, "p2", 0L))
-                        .putProblemStateMapsByContestantJid("c1", ImmutableMap.of(
+                        .putAttemptsMapsByContestantJid("c1", Map.of("p1", 3, "p2", 0))
+                        .putAttemptsMapsByContestantJid("c2", Map.of("p1", 1, "p2", 3))
+                        .putAttemptsMapsByContestantJid("c3", Map.of("p1", 1, "p2", 0))
+                        .putPenaltyMapsByContestantJid("c1", Map.of("p1", 6L, "p2", 0L))
+                        .putPenaltyMapsByContestantJid("c2", Map.of("p1", 0L, "p2", 4L))
+                        .putPenaltyMapsByContestantJid("c3", Map.of("p1", 3L, "p2", 0L))
+                        .putProblemStateMapsByContestantJid("c1", Map.of(
                                 "p1", GcjScoreboardProblemState.ACCEPTED,
                                 "p2", GcjScoreboardProblemState.NOT_ACCEPTED))
-                        .putProblemStateMapsByContestantJid("c2", ImmutableMap.of(
+                        .putProblemStateMapsByContestantJid("c2", Map.of(
                                 "p1", GcjScoreboardProblemState.NOT_ACCEPTED,
                                 "p2", GcjScoreboardProblemState.ACCEPTED))
-                        .putProblemStateMapsByContestantJid("c3", ImmutableMap.of(
+                        .putProblemStateMapsByContestantJid("c3", Map.of(
                                 "p1", GcjScoreboardProblemState.ACCEPTED,
                                 "p2", GcjScoreboardProblemState.NOT_ACCEPTED))
                         .build());
