@@ -2,12 +2,10 @@ package judgels.uriel.contest.scoreboard.icpc;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -52,17 +50,17 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                 .wrongSubmissionPenalty(1000)
                 .build();
 
-        private Set<ContestContestant> contestants = ImmutableSet.of(
+        private Set<ContestContestant> contestants = Set.of(
                 new ContestContestant.Builder().userJid("c1").build(),
                 new ContestContestant.Builder().userJid("c2").contestStartTime(Instant.ofEpochSecond(300)).build());
 
-        private Map<String, Profile> profilesMap = ImmutableMap.of(
+        private Map<String, Profile> profilesMap = Map.of(
                 "c1", new Profile.Builder().username("c1").build(),
                 "c2", new Profile.Builder().username("c2").build());
 
         @Test
         void time_calculation() {
-            List<Submission> submissions = ImmutableList.of(
+            List<Submission> submissions = List.of(
                     createSubmission(1, 300, "c1", "p1", 100, Verdict.ACCEPTED),
                     createSubmission(2, 360, "c2", "p2", 100, Verdict.ACCEPTED),
                     createSubmission(3, 400, "c1", "p2", 0, Verdict.TIME_LIMIT_EXCEEDED),
@@ -77,7 +75,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                     contestants,
                     profilesMap,
                     submissions,
-                    ImmutableList.of(),
+                    List.of(),
                     Optional.empty());
 
             assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -115,7 +113,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
         @Nested
         class ProblemOrdering {
-            private List<Submission> submissions = ImmutableList.of(
+            private List<Submission> submissions = List.of(
                     createSubmission(1, 900, "c2", "p1", 100, Verdict.ACCEPTED),
                     createSubmission(2, 300, "c1", "p2", 100, Verdict.ACCEPTED));
 
@@ -129,7 +127,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -180,7 +178,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -221,7 +219,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
         class Sorting {
             @Test
             void solve_over_penalty() {
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 300, "c1", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(2, 360, "c2", "p2", 100, Verdict.ACCEPTED),
                         createSubmission(3, 900, "c2", "p1", 100, Verdict.ACCEPTED));
@@ -234,7 +232,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -272,7 +270,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
             @Test
             void penalty_as_tiebreaker() {
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 900, "c2", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(2, 900, "c1", "p1", 100, Verdict.ACCEPTED));
 
@@ -284,7 +282,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -322,7 +320,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
             @Test
             void same_rank_if_equal() {
-                contestants = ImmutableSet.of(
+                contestants = Set.of(
                         new ContestContestant.Builder().userJid("c1").build(),
                         new ContestContestant.Builder()
                                 .userJid("c2")
@@ -330,12 +328,12 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                                 .build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
-                profilesMap = ImmutableMap.of(
+                profilesMap = Map.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
                         "c3", new Profile.Builder().username("c3").build());
 
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 660, "c1", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(2, 900, "c2", "p1", 100, Verdict.ACCEPTED),
                         createSubmission(3, 900, "c3", "p1", 100, Verdict.ACCEPTED));
@@ -348,7 +346,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -401,17 +399,17 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
             @Test
             void zero_points_ordering() {
-                contestants = ImmutableSet.of(
+                contestants = Set.of(
                         new ContestContestant.Builder().userJid("c1").build(),
                         new ContestContestant.Builder().userJid("c2").build(),
                         new ContestContestant.Builder().userJid("c3").build());
 
-                profilesMap = ImmutableMap.of(
+                profilesMap = Map.of(
                         "c1", new Profile.Builder().username("c1").build(),
                         "c2", new Profile.Builder().username("c2").build(),
                         "c3", new Profile.Builder().username("c3").build());
 
-                List<Submission> submissions = ImmutableList.of(
+                List<Submission> submissions = List.of(
                         createSubmission(1, 660, "c1", "p1", 0, Verdict.WRONG_ANSWER),
                         createSubmission(2, 900, "c1", "p2", 0, Verdict.WRONG_ANSWER),
                         createSubmission(3, 900, "c3", "p2", 0, Verdict.WRONG_ANSWER));
@@ -424,7 +422,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -480,7 +478,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
         class PendingAfterFreeze {
             private Optional<Instant> freezeTime = Optional.of(Instant.ofEpochSecond(500));
 
-            private List<Submission> baseSubmissions = ImmutableList.of(
+            private List<Submission> baseSubmissions = List.of(
                     createSubmission(1, 100, "c1", "p1", 100, Verdict.ACCEPTED),
                     createSubmission(2, 400, "c2", "p2", 100, Verdict.ACCEPTED),
                     createSubmission(3, 450, "c2", "p1", 100, Verdict.ACCEPTED));
@@ -495,7 +493,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         baseSubmissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -533,10 +531,8 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
             @Test
             void pending_does_not_overwrite_accepted() {
-                List<Submission> submissions = new ImmutableList.Builder<Submission>()
-                        .addAll(baseSubmissions)
-                        .add(createSubmission(4, 501, "c1", "p1", 100, Verdict.ACCEPTED))
-                        .build();
+                List<Submission> submissions = new ArrayList<>(baseSubmissions);
+                submissions.add(createSubmission(4, 501, "c1", "p1", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
                         contest,
@@ -546,7 +542,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -584,10 +580,8 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
             @Test
             void pending_does_overwrite_not_accepted() {
-                List<Submission> submissions = new ImmutableList.Builder<Submission>()
-                        .addAll(baseSubmissions)
-                        .add(createSubmission(4, 501, "c1", "p2", 100, Verdict.ACCEPTED))
-                        .build();
+                List<Submission> submissions = new ArrayList<>(baseSubmissions);
+                submissions.add(createSubmission(4, 501, "c1", "p2", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
                         contest,
@@ -597,7 +591,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -635,10 +629,8 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
             @Test
             void pending_counts_on_freeze_time() {
-                List<Submission> submissions = new ImmutableList.Builder<Submission>()
-                        .addAll(baseSubmissions)
-                        .add(createSubmission(4, 500, "c1", "p2", 100, Verdict.ACCEPTED))
-                        .build();
+                List<Submission> submissions = new ArrayList<>(baseSubmissions);
+                submissions.add(createSubmission(4, 500, "c1", "p2", 100, Verdict.ACCEPTED));
 
                 ScoreboardProcessResult result = scoreboardProcessor.process(
                         contest,
@@ -648,7 +640,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         freezeTime);
 
                 assertThat(Lists.transform(result.getEntries(), e -> (IcpcScoreboardEntry) e)).containsExactly(
@@ -687,7 +679,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
 
         @Nested
         class IncrementalProcess {
-            List<Submission> submissions = ImmutableList.of(
+            List<Submission> submissions = List.of(
                     createSubmission(5, 100, "c1", "p1", 0, Verdict.WRONG_ANSWER),
                     createSubmission(6, 200, "c2", "p1", 0, Verdict.WRONG_ANSWER),
                     createSubmission(7, 300, "c1", "p1", 0, Verdict.WRONG_ANSWER),
@@ -696,12 +688,12 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                     createSubmission(10, 600, "c2", "p1", 0, Verdict.PENDING),
                     createSubmission(11, 700, "c1", "p2", 100, Verdict.ACCEPTED));
 
-            Set<ContestContestant> contestants = ImmutableSet.of(
+            Set<ContestContestant> contestants = Set.of(
                     new ContestContestant.Builder().userJid("c1").build(),
                     new ContestContestant.Builder().userJid("c2").contestStartTime(Instant.ofEpochSecond(300)).build(),
                     new ContestContestant.Builder().userJid("c3").build());
 
-            Map<String, Profile> profilesMap = ImmutableMap.of(
+            Map<String, Profile> profilesMap = Map.of(
                     "c1", new Profile.Builder().username("c1").build(),
                     "c2", new Profile.Builder().username("c2").build(),
                     "c3", new Profile.Builder().username("c3").build());
@@ -711,14 +703,14 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                     .putFirstToSolveSubmissionJids("p1", "JIDSX")
                     .putLastAcceptedPenaltiesByContestantJid("c2", 0)
                     .putLastAcceptedPenaltiesByContestantJid("c3", 90000)
-                    .putAttemptsMapsByContestantJid("c2", ImmutableMap.of("p1", 0, "p2", 2))
-                    .putAttemptsMapsByContestantJid("c3", ImmutableMap.of("p1", 1, "p2", 0))
-                    .putPenaltyMapsByContestantJid("c2", ImmutableMap.of("p1", 0L, "p2", 3L))
-                    .putPenaltyMapsByContestantJid("c3", ImmutableMap.of("p1", 3L, "p2", 0L))
-                    .putProblemStateMapsByContestantJid("c2", ImmutableMap.of(
+                    .putAttemptsMapsByContestantJid("c2", Map.of("p1", 0, "p2", 2))
+                    .putAttemptsMapsByContestantJid("c3", Map.of("p1", 1, "p2", 0))
+                    .putPenaltyMapsByContestantJid("c2", Map.of("p1", 0L, "p2", 3L))
+                    .putPenaltyMapsByContestantJid("c3", Map.of("p1", 3L, "p2", 0L))
+                    .putProblemStateMapsByContestantJid("c2", Map.of(
                             "p1", IcpcScoreboardProblemState.NOT_ACCEPTED,
                             "p2", IcpcScoreboardProblemState.NOT_ACCEPTED))
-                    .putProblemStateMapsByContestantJid("c3", ImmutableMap.of(
+                    .putProblemStateMapsByContestantJid("c3", Map.of(
                             "p1", IcpcScoreboardProblemState.ACCEPTED,
                             "p2", IcpcScoreboardProblemState.NOT_ACCEPTED))
                     .build();
@@ -733,7 +725,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new IcpcScoreboardIncrementalContent.Builder()
@@ -742,14 +734,14 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         .putFirstToSolveSubmissionJids("p2", "JIDS9")
                         .putLastAcceptedPenaltiesByContestantJid("c1", 340000L)
                         .putLastAcceptedPenaltiesByContestantJid("c2", 200000L)
-                        .putAttemptsMapsByContestantJid("c1", ImmutableMap.of("p1", 3, "p2", 0))
-                        .putAttemptsMapsByContestantJid("c2", ImmutableMap.of("p1", 1, "p2", 1))
-                        .putPenaltyMapsByContestantJid("c1", ImmutableMap.of("p1", 6L, "p2", 0L))
-                        .putPenaltyMapsByContestantJid("c2", ImmutableMap.of("p1", 0L, "p2", 4L))
-                        .putProblemStateMapsByContestantJid("c1", ImmutableMap.of(
+                        .putAttemptsMapsByContestantJid("c1", Map.of("p1", 3, "p2", 0))
+                        .putAttemptsMapsByContestantJid("c2", Map.of("p1", 1, "p2", 1))
+                        .putPenaltyMapsByContestantJid("c1", Map.of("p1", 6L, "p2", 0L))
+                        .putPenaltyMapsByContestantJid("c2", Map.of("p1", 0L, "p2", 4L))
+                        .putProblemStateMapsByContestantJid("c1", Map.of(
                                 "p1", IcpcScoreboardProblemState.FIRST_ACCEPTED,
                                 "p2", IcpcScoreboardProblemState.NOT_ACCEPTED))
-                        .putProblemStateMapsByContestantJid("c2", ImmutableMap.of(
+                        .putProblemStateMapsByContestantJid("c2", Map.of(
                                 "p1", IcpcScoreboardProblemState.NOT_ACCEPTED,
                                 "p2", IcpcScoreboardProblemState.FIRST_ACCEPTED))
                         .build());
@@ -764,8 +756,8 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         styleModuleConfig,
                         contestants,
                         profilesMap,
-                        ImmutableList.of(),
-                        ImmutableList.of(),
+                        List.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new IcpcScoreboardIncrementalContent.Builder()
@@ -784,7 +776,7 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         contestants,
                         profilesMap,
                         submissions,
-                        ImmutableList.of(),
+                        List.of(),
                         Optional.empty());
 
                 assertThat(result.getIncrementalContent()).isEqualTo(new IcpcScoreboardIncrementalContent.Builder()
@@ -794,19 +786,19 @@ class IcpcScoreboardProcessorTests extends AbstractProgrammingScoreboardProcesso
                         .putLastAcceptedPenaltiesByContestantJid("c1", 340000L)
                         .putLastAcceptedPenaltiesByContestantJid("c2", 200000L)
                         .putLastAcceptedPenaltiesByContestantJid("c3", 90000L)
-                        .putAttemptsMapsByContestantJid("c1", ImmutableMap.of("p1", 3, "p2", 0))
-                        .putAttemptsMapsByContestantJid("c2", ImmutableMap.of("p1", 1, "p2", 3))
-                        .putAttemptsMapsByContestantJid("c3", ImmutableMap.of("p1", 1, "p2", 0))
-                        .putPenaltyMapsByContestantJid("c1", ImmutableMap.of("p1", 6L, "p2", 0L))
-                        .putPenaltyMapsByContestantJid("c2", ImmutableMap.of("p1", 0L, "p2", 4L))
-                        .putPenaltyMapsByContestantJid("c3", ImmutableMap.of("p1", 3L, "p2", 0L))
-                        .putProblemStateMapsByContestantJid("c1", ImmutableMap.of(
+                        .putAttemptsMapsByContestantJid("c1", Map.of("p1", 3, "p2", 0))
+                        .putAttemptsMapsByContestantJid("c2", Map.of("p1", 1, "p2", 3))
+                        .putAttemptsMapsByContestantJid("c3", Map.of("p1", 1, "p2", 0))
+                        .putPenaltyMapsByContestantJid("c1", Map.of("p1", 6L, "p2", 0L))
+                        .putPenaltyMapsByContestantJid("c2", Map.of("p1", 0L, "p2", 4L))
+                        .putPenaltyMapsByContestantJid("c3", Map.of("p1", 3L, "p2", 0L))
+                        .putProblemStateMapsByContestantJid("c1", Map.of(
                                 "p1", IcpcScoreboardProblemState.ACCEPTED,
                                 "p2", IcpcScoreboardProblemState.NOT_ACCEPTED))
-                        .putProblemStateMapsByContestantJid("c2", ImmutableMap.of(
+                        .putProblemStateMapsByContestantJid("c2", Map.of(
                                 "p1", IcpcScoreboardProblemState.NOT_ACCEPTED,
                                 "p2", IcpcScoreboardProblemState.FIRST_ACCEPTED))
-                        .putProblemStateMapsByContestantJid("c3", ImmutableMap.of(
+                        .putProblemStateMapsByContestantJid("c3", Map.of(
                                 "p1", IcpcScoreboardProblemState.ACCEPTED,
                                 "p2", IcpcScoreboardProblemState.NOT_ACCEPTED))
                         .build());
